@@ -24,6 +24,8 @@ Version 1.13.10+dev:
    * Fixed ingame help showing units you haven't encountered (bug #2135)
    * Fix recalls updating shroud immediately when "Delay Shroud Updates" is set
      (bug #2196)
+   * Fixed not being able to undo previous moves after entering planning mode 
+     (bug #2303)
 
 
 Version 1.13.10:
