@@ -61,6 +61,8 @@ Version 1.13.10+dev:
      greater (bug #2185).
    * Fix recalls updating shroud immediately when "Delay Shroud Updates" is set
      (bug #2196)
+   * Fixed not being able to undo previous moves after entering planning mode 
+     (bug #2303)
 
 Version 1.13.10:
  * Add-ons client:
